@@ -1,3 +1,6 @@
+2008-04-25 Enforce python >= 2.4; remove subprocess build - EF
+
+2008-04-25 Enforce the numpy requirement at build time - JDH
 
 2008-04-24 Make numpy 1.1 and python 2.3 required when importing
            matplotlib - EF
